--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 authors = ["FWFWLL ffl@vivaldi.net"]
 
 [dependencies]
+colored = "2.0.0"
 image = "0.24.3"
 rayon = "1.5.3"
 reqwest = {version = "0.11.11", features = ["blocking"]}
